# cppdf

./: CMakeLists.txt  Makefile  README.md
include/: logger.hpp
scripts/: build.sh
src/: logger.cpp  main.cpp
